# gwaspeek

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: README.md  example_sumstats.tsv  run_example.sh
rust/gwaspeek/: Cargo.toml
rust/gwaspeek/src/: cli.rs  interactive.rs  io.rs  lib.rs  main.rs  manhattan.rs  plot_state.rs  preprocess.rs  terminal_canvas.rs  versioning.rs
src/gwaspeek/: __init__.py  cli.py  interactive.py  io.py  manhattan.py  plot_state.py  preprocess.py  terminal_canvas.py  versioning.py
src/gwaspeek/data/: column_aliases_from_formatbook.json
src/gwast/: __init__.py  cli.py  io.py  manhattan.py  preprocess.py  qq.py  terminal_canvas.py
tests/: conftest.py  test_cli.py  test_interactive.py  test_io.py  test_preprocess.py  test_render.py
tests/fixtures/: sumstats_formatbook_headers.tsv  sumstats_mlog10p.tsv  sumstats_small.tsv
