[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwaspeek"
version = "0.1.0"
description = "gwaspeek: interactive terminal viewer for GWAS summary statistics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gwaspeek contributors" }]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/Cloufield/gwast"
Repository = "https://github.com/Cloufield/gwast"
Issues = "https://github.com/Cloufield/gwast/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
gwaspeek = "gwaspeek.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gwaspeek = ["data/*.gz", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
