[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwaspeek"
version = "0.4.2"
description = "gwaspeek: interactive terminal viewer for GWAS summary statistics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yunye He" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Environment :: Console",
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/Cloufield/gwaspeek"
Repository = "https://github.com/Cloufield/gwaspeek"
Issues = "https://github.com/Cloufield/gwaspeek/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
gwaspeek = "gwaspeek.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gwaspeek = ["data/*.gz", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
