[package]
name = "gwaspeek"
version = "0.4.2"
edition = "2021"
description = "Terminal Manhattan plots for GWAS summary statistics (Rust port matching Python gwaspeek)"
license = "MIT"

[lib]
name = "gwaspeek"
path = "src/lib.rs"

[[bin]]
name = "gwaspeek"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
unicode-width = "0.2"
